[package]
name = "karaagecc_ast"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
karaage_utils = { path = "../karaage_utils" }
karaagecc_source = { path = "../karaagecc_source" }

[dev-dependencies]
karaage_asserts = { path = "../karaage_asserts" }
