[package]
name = "karaagecc_error"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
karaagecc_source = { path = "../karaagecc_source" }
thiserror = "1.0"

[dev-dependencies]
karaage_asserts = { path = "../karaage_asserts" }
