[package]
name = "karaagecc_error"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
karaagecc_source = { path = "../karaagecc_source" }

[dev-dependencies]
karaage_asserts = { path = "../karaage_asserts" }
