[package]
name = "karaagecc_lexer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
karaagecc_error = { path = "../karaagecc_error" }
karaagecc_token = { path = "../karaagecc_token" }
karaagecc_chars = { path = "../karaagecc_chars" }
karaagecc_source = { path = "../karaagecc_source" }

[dev-dependencies]
karaage_asserts = { path = "../karaage_asserts" }
