[package]
name = "tsuyu"
version = "0.1.0"
edition = "2021"

[dependencies]
tempfile = "3.3.0"
tsuyu_error = { path = "../tsuyu_error" }
tsuyu_source = { path = "../tsuyu_source" }
tsuyu_ast = { path = "../tsuyu_ast" }
tsuyu_lexer = { path = "../tsuyu_lexer" }
tsuyu_parser = { path = "../tsuyu_parser" }
tsuyuir = { path = "../tsuyuir" }
tsuyuir_codegen = { path = "../tsuyuir_codegen" }

[dev-dependencies]
insta = { version = "1.14.0", features = ["glob", "toml"] }
serde = { version = "1.0", features = ["derive"] }
