[package]
name = "tsuyu_lexer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tsuyu_error = { path = "../tsuyu_error" }
tsuyu_token = { path = "../tsuyu_token" }
tsuyu_chars = { path = "../tsuyu_chars" }
tsuyu_source = { path = "../tsuyu_source" }
tsuyu_utils = { path = "../tsuyu_utils" }

[dev-dependencies]
tsuyu_asserts = { path = "../tsuyu_asserts" }
